iOS simulator does not support WebAssembly https://bugs.webkit.org/show_bug.cgi?id=191064

Reviewed by Yusuke Suzuki.

Now that it seems we can JIT in the Simulator we should enable
WebAssembly there. This just means enabling FTL/B3 so WASM gets
enabled.

* wtf/PlatformEnable.h:
* wtf/PlatformEnableCocoa.h:


Canonical link: https://commits.webkit.org/227484@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264745 268f45cc-cd09-0410-ab3c-d52691b4dbfc